--- a/_dev/scss/layout/_navigation.scss
+++ b/_dev/scss/layout/_navigation.scss
@@ -27,28 +27,31 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-bottom: 65px;
+    padding: 0 $wrapper-padding 64px;
   }
 
-  > * > ul {
-    //flex-grow: 1;
-    margin: 48px $wrapper-padding;
-    text-align: center;
+  hr {
+    border-color: $gray;
+  }
 
-    @include start-at($header-breakpoint) {
-      margin-left: auto;
-      margin-right: auto;
-      width: 480px;
-    }
+  ul {
+    margin: 36px 0;
+    text-align: left;
 
     li {
       padding: 14px 0;
-      border-bottom: 1px solid $border;
 
       &.disabled,
       &.disabled a {
         pointer-events: none;
         opacity: 0.6;
+      }
+    }
+
+    &:first-of-type {
+      a {
+        font-weight: 600;
+        font-size: 16px;
       }
     }
   }
@@ -57,38 +60,19 @@
     font-weight: 400;
     display: block;
     padding: 6px 0;
-    font-size: 30px;
+    font-size: 13px;
     color: $white;
     letter-spacing: 0.02em;
     text-transform: uppercase;
     transition: color $trans, opacity $trans;
-
-    &.external-link {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      &:after {
-        content: '';
-        display: block;
-        width: 16px;
-        height: 16px;
-        margin-left: 8px;
-        transition: transform $trans;
-        background: url('./images/svgs/external.svg') center / cover no-repeat;
-      }
-    }
-
-    @include start-at($medium) {
-      font-size: 24px;
-    }
 
     &:hover {
       opacity: 0.6;
     }
   }
 
-  li.current-menu-item a {
+  li.is-active a,
+  a.is-active {
     color: $brand;
   }
 }
@@ -97,30 +81,18 @@
 // Menu is open
 // ----------------------------------------
 
-body.menu-is-open {
+body.nav-is-active {
   overflow: hidden;
 
-  .site-header {
+  .view-header {
     background: $black;
+    color: $white;
+    border-color: $gray;
   }
 
   .navigation-drawer {
     opacity: 1;
     pointer-events: inherit;
-  }
-
-  .navigation-screen {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 6;
-
-    &:hover {
-      cursor: crosshair;
-    }
   }
 }
 
