--- a/_dev/scss/layout/_header.scss
+++ b/_dev/scss/layout/_header.scss
@@ -10,6 +10,84 @@ $header-height: 56px;
 // Home
 // ----------------------------------------
 
+.view-header-lg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  background: $white;
+  border-bottom: 1px solid #E0E3E6;
+  
+  @include stop-at($header-breakpoint) {
+    display: none;
+  }
+}
+
+.view-header-lg__inner {
+  @include wrapper;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+
+}
+
+.view-header-lg__left {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 50%;
+
+  .site-logo {
+    width: 104px;
+    min-width: 104px;
+    margin-right: 32px;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.view-header-lg__search {
+  position: relative;
+  flex-grow: 1;
+  max-width: 462px;
+
+  i {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translate3d(0, -50%, 0);
+    z-index: 2;
+  }
+
+  input {
+    display: block;
+    width: 100%;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #C2C5C8;
+    border-radius: 100px;
+    padding: 0 36px;
+  }
+}
+
+.view-header-lg__nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+
+  li {
+    margin-left: 24px;
+  }
+
+  a {
+    font-weight: 500;
+  }
+}
+
 
 
 // ----------------------------------------
@@ -22,10 +100,14 @@ $header-height: 56px;
   border-bottom: 1px solid $border;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: $header-height-sm;
   color: $black;
   transition: background $trans, color $trans, border-color $trans;
+
+  @include start-at($header-breakpoint) {
+    display: none;
+  }
 
   .view-header__left,
   .view-header__right {
@@ -40,11 +122,16 @@ $header-height: 56px;
     i {
       display: block;
       color: currentColor;
+      font-size: 22px;
+
+      &.ri-search-2-line {
+        font-size: 20px;
+      }
     }
   }
 
   .view-header__featured {
-    flex-grow: 1;
+    width: 70%;
     text-align: center;
     padding: 0 6px;
     display: flex;
@@ -71,15 +158,5 @@ $header-height: 56px;
     }
   }
 
-  .ri-arrow-left-s-line {
-    font-size: 22px;
-  }
 
-  .ri-search-2-line {
-    font-size: 20px;
-  }
-
-  .ri-menu-line {
-    font-size: 22px;
-  }
 }
