home section add

--- a/_dev/scss/_settings.scss
+++ b/_dev/scss/_settings.scss
@@ -28,6 +28,10 @@ $blue: #489AE9;
 $yellow: #FFBE00;
 $green: #45C78A;
 
+$gradient-green: linear-gradient(90deg, #9BE15D 4.17%, #00E3AE 100%);
+$gradient-pink: linear-gradient(90deg, #F77062 0%, #FE5196 100%);
+$gradient-blue: linear-gradient(90deg, #4171F3 4.17%, #922DE2 100%);
+
 
 $white: #ffffff;
 $black: #15171A;
