--- a/_dev/scss/components/_banner.scss
+++ b/_dev/scss/components/_banner.scss
@@ -14,6 +14,14 @@
   .slider {
     order: 2;
   }
+
+  @include start-at($header-breakpoint) {
+    .slider {
+      width: $wrapper-width;
+      margin: 0 auto;
+      padding: 36px 0;
+    }
+	}
 }
 
 .banner {
