--- a/_dev/scss/components/_businessPreview.scss
+++ b/_dev/scss/components/_businessPreview.scss
@@ -38,8 +38,30 @@ business-preview {
 	height: auto;
 	margin-right: 16px;
 
+  &:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    border: 1px solid #4171F3;
+    // border-image-slice: 4;
+    // border-width: 1px;
+    // border-image-source: linear-gradient(to left, #4171F3, #922DE2);
+    border-radius: 8px;
+    opacity: 0;
+    transition: opacity $trans;
+  }
+
 	&:hover {
 		cursor: pointer;
+
+    &:after {
+      opacity: 1;
+    }
 	}
 
 	@include start-at($medium) {
