all reviews desktop

--- a/_dev/scss/compile.scss
+++ b/_dev/scss/compile.scss
@@ -41,7 +41,7 @@
 //@import "components/_animateIn";
 @import "components/_search";
 @import "components/_banner";
-// @import "components/_lists";
+@import "components/_modal";
 // @import "components/_forms";
 
 @import "components/_business";
