--- a/_dev/scss/components/_modal.scss
+++ b/_dev/scss/components/_modal.scss
@@ -17,6 +17,10 @@
 	pointer-events: none;
 	transition: opacity 0.2s ease;
 
+	.view-header {
+		display: flex !important;
+	}
+
 	&.is-active {
 		opacity: 1;
 		pointer-events: inherit;
@@ -45,28 +49,23 @@
 
 .modal {
 	position: relative;
-	max-width: calc(100% - 12px);
-	max-height: calc(100% - 12px);
-	border-radius: 3px;
-	width: 580px;
-    height: auto;
+	max-width: 100%;
+	max-height: 100%;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+  height: auto;
 	overflow: auto;
 	background: $white;
 	transition: all $transition;
 	padding: 36px 12px;
 
-	@include start-at($medium) {
+	@include start-at($header-breakpoint) {
 		padding: 36px;
+		max-width: 816px;
+		max-height: 860px;
+		min-height: 70%;
 	}
-
-	.f2 {
-		font-size: 18px !important;
-	}
-
-	// @include stop-at($small) {
-	// 	height: 100%;
-	// 	width: 100%;
-	// }
 }
 
 
@@ -92,6 +91,10 @@ body.modal-is-active {
 	width: 44px;
 	height: 44px;
 	transition: opacity $trans;
+
+	i {
+		font-size: 14px;
+	}
 
 	&:after {
 		content: "";
