--- a/_dev/scss/compile.scss
+++ b/_dev/scss/compile.scss
@@ -42,6 +42,7 @@
 @import "components/_search";
 @import "components/_banner";
 @import "components/_modal";
+@import "components/_filters";
 // @import "components/_forms";
 
 @import "components/_business";
