--- a/_dev/scss/components/_businessPreview.scss
+++ b/_dev/scss/components/_businessPreview.scss
@@ -107,3 +107,119 @@ business-preview {
     margin: 8px 0;
   }
 }
+
+
+search-results {
+
+  business-preview {
+    display: flex;
+    width: 100%;
+    height: auto;
+    min-width: 100%;
+    padding: 20px;
+    border: 1px solid $border;
+    margin: 12px 0;
+
+    @include start-at($header-breakpoint) {
+      font-size: 14px;
+      margin: 24px 0;
+    }
+
+    &:after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 4;
+      border: 1px solid #4171F3;
+      border-radius: 8px;
+      opacity: 0;
+      transition: opacity $trans;
+    }
+
+  	&:hover {
+  		cursor: pointer;
+
+      &:after {
+        opacity: 1;
+      }
+  	}
+
+  	@include start-at($medium) {
+  		min-width: 100%;
+  		width: 100%;
+  	}
+  }
+
+  .business-preview__featured-image {
+    width: 68px;
+    height: 68px;
+    min-width: 68px;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    margin-right: 18px;
+
+    @include start-at($header-breakpoint) {
+      width: 144px;
+      height: 144px;
+      min-width: 144px;
+      margin-right: 24px;
+    }
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .business-preview__content  {
+    border: none;
+    padding: 0;
+    margin: 0;
+
+    h4 {
+      font-size: 14px;
+    }
+
+    @include start-at($header-breakpoint) {
+      h4 {
+        width: 100%;
+        font-size: 16px;
+        margin-top: 8px;
+      }
+      rating-preview {
+        width: 100%;
+      }
+
+      business-category,
+      address {
+        display: inline;
+      }
+    }
+  }
+}
+
+.busiess-preview__review {
+  display: none;
+
+  @include start-at($header-breakpoint) {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 16px;
+
+    i {
+      font-size: 22px;
+      margin-right: 12px;
+    }
+
+    a {
+      text-decoration: underline;
+      font-weight: 600;
+    }
+  }
+}
