--- a/ajua-static/src/scss/compile.scss
+++ b/ajua-static/src/scss/compile.scss
@@ -5,14 +5,14 @@
 // ----------------------------------------
 //
 // ----------------------------------------
-// @import "@primer/css/support/variables/layout.scss";
-// @import "@primer/css/support/mixins/layout.scss";
-// @import "@primer/css/layout/index.scss";
-// @import "@primer/css/utilities/colors.scss";
-// @import "@primer/css/utilities/flexbox.scss";
-// @import "@primer/css/utilities/margin.scss";
-// @import "@primer/css/utilities/padding.scss";
-// @import "@primer/css/utilities/visibility-display.scss";
+@import "@primer/css/support/variables/layout.scss";
+@import "@primer/css/support/mixins/layout.scss";
+@import "@primer/css/layout/index.scss";
+@import "@primer/css/utilities/colors.scss";
+@import "@primer/css/utilities/flexbox.scss";
+@import "@primer/css/utilities/margin.scss";
+@import "@primer/css/utilities/padding.scss";
+@import "@primer/css/utilities/visibility-display.scss";
 
 // ----------------------------------------
 // Base
