fix: fixed date, address and header design issue

--- a/ajua-static/src/scss/layout/_header.scss
+++ b/ajua-static/src/scss/layout/_header.scss
@@ -40,7 +40,7 @@ body {
 }
 
 .view-header-lg__inner {
-  // @include wrapper;
+  @include wrapper;
   display: flex;
   align-items: center;
   justify-content: space-between;
