Adding for business template

--- a/_dev/scss/_settings.scss
+++ b/_dev/scss/_settings.scss
@@ -27,6 +27,7 @@ $red: #D13761;
 $blue: #489AE9;
 $yellow: #FFBE00;
 $green: #45C78A;
+$purple: #922DE2;
 
 $gradient-green: linear-gradient(90deg, #9BE15D 4.17%, #00E3AE 100%);
 $gradient-pink: linear-gradient(90deg, #F77062 0%, #FE5196 100%);
