--- a/_dev/scss/components/_oneoffs.scss
+++ b/_dev/scss/components/_oneoffs.scss
@@ -2,40 +2,39 @@
 //  One Offs
 // ---------------------------------------------------------------------
 
-.stars-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  z-index: 0;
-  width: 100%;
+.media-object {
 
-  &:before {
-    content: '';
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    height: 132px;
-    left: 0;
-    top: 0;
-    background: linear-gradient(0deg, rgba(0,0,0,0) 20%, rgba(0,0,0,1) 88%);
+  @include start-at($large) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
+}
 
-  &:after {
-    content: '';
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    height: 615px;
-    left: 0;
-    bottom: 0;
-    background: linear-gradient(354.98deg, #010101 20.71%, rgba(1, 1, 1, 0) 88.86%);
+.media-object__media {
+
+  @include start-at($large) {
+    width: calc(50% - 24px);
   }
+}
 
-  img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+.media-object__content {
+  padding: 24px 0 0;
+
+  @include start-at($large) {
+    width: calc(50% - 24px);
+    padding: 24px 0;
+  }
+}
+
+@include start-at($large) {
+  .media-object--flip {
+    .media-object__media {
+      order: 2;
+    }
+    .media-object__content {
+      order: 1;
+    }
   }
 }
 
@@ -44,26 +43,6 @@
 //
 // ----------------------------------------
 
-.missions {
-  @include start-at($medium) {
-    margin: 80px 0 0;
-  }
-  @include start-at($large) {
-    margin: 80px 0 0;
-  }
-}
-
-.missions__content_2 {
-  margin: 48px 0 72px;
-
-  @include start-at($medium) {
-    margin: 97px 0 72px;
-  }
-
-  @include start-at($large) {
-    margin: 272px 0 0;
-  }
-}
 
 
 // ----------------------------------------
