--- a/src/common/scss/components/_banner.scss
+++ b/src/common/scss/components/_banner.scss
@@ -38,7 +38,7 @@
     align-items: center;
     justify-content: center;
     padding: 220px 0;
-    min-height: 720px;
+    //min-height: 720px;
   }
 }
 
