--- a/src/common/scss/components/_businessPreview.scss
+++ b/src/common/scss/components/_businessPreview.scss
@@ -12,7 +12,7 @@
 
     business-preview,
     .spacer {
-      display: block;
+      display: flex;
       width: calc(25% - 24px);
       min-width: calc(25% - 24px);
       margin: 0 0 24px;
@@ -25,7 +25,8 @@
 // ----------------------------------------
 
 business-preview {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   position: relative;
   z-index: 1;
@@ -66,6 +67,7 @@ business-preview {
   @include start-at($medium) {
     min-width: 360px;
     width: 360px;
+    font-size: 14px;
   }
 }
 
@@ -92,6 +94,7 @@ business-preview {
   border: 1px solid $border;
   border-top: none;
   border-radius: 0 0 8px 8px;
+  flex-grow: 1;
 
   @include start-at($medium) {
     padding: 24px;
@@ -104,6 +107,10 @@ business-preview {
   rating-preview,
   business-category {
     margin: 8px 0;
+  }
+
+  rating-preview {
+    font-size: 12px;
   }
 }
 
