--- a/src/common/scss/layout/_header.scss
+++ b/src/common/scss/layout/_header.scss
@@ -88,7 +88,7 @@ body {
     background: #ffffff;
     border: 1px solid #c2c5c8;
     border-radius: 100px;
-    padding: 0 36px;
+    padding: 0 36px 0 40px;
   }
 }
 
@@ -103,6 +103,25 @@ body {
 
   a {
     font-weight: 500;
+    position: relative;
+    padding: 4px 0;
+
+    &:after {
+      content: '';
+      width: 100%;
+      height: 1px;
+      background: $gradient-blue;
+      position: absolute;
+      bottom: 0;
+      display: block;
+      left: 0;
+      opacity: 0;
+      transition: opacity $trans;
+    }
+
+    &.active:after {
+      opacity: 1;
+    }
   }
 }
 
@@ -135,6 +154,7 @@ body {
       display: block;
       color: currentColor;
       font-size: 22px;
+      transition: none;
 
       &.ri-search-2-line {
         font-size: 20px;
@@ -169,5 +189,11 @@ body {
         fill: currentColor;
       }
     }
+  }
+}
+
+body.nav-is-active {
+  .view-header {
+    color: $white;
   }
 }
