--- a/src/common/scss/compile.scss
+++ b/src/common/scss/compile.scss
@@ -43,7 +43,7 @@
 @import "components/_banner";
 @import "components/_modal";
 @import "components/_filters";
-// @import "components/_forms";
+@import "components/_forms";
 
 @import "components/_business";
 @import "components/_reviews";
