--- a/src/common/scss/components/_banner.scss
+++ b/src/common/scss/components/_banner.scss
@@ -121,19 +121,38 @@
   background: $gradient-blue;
   color: $white;
   position: relative;
+
   .wrapper {
     position: relative;
+  }
+
+  > figure {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
 .market-hero__content {
   max-width: 600px;
+  position: relative;
+  z-index: 2;
 }
 
 .market-hero__img {
   position: absolute;
   right: 0;
   top: 0;
+  z-index: 2;
   transform: translate3d(0, -36px, 0);
   max-width: calc(100% - 624px);
 
