--- a/src/common/scss/components/_search.scss
+++ b/src/common/scss/components/_search.scss
@@ -2,7 +2,8 @@
 //  Search
 // ---------------------------------------------------------------------
 
-quick-search-trigger {
+quick-search-trigger,
+.quick-search-trigger {
   display: block;
   width: 42px;
   min-width: 42px;
@@ -50,7 +51,8 @@ body.search-is-active {
   }
 }
 
-quick-search {
+quick-search,
+.quick-search {
   position: fixed;
   top: 0;
   left: 0;
@@ -77,7 +79,8 @@ quick-search {
       background: linear-gradient(90deg, #4171F3 4.17%, #922DE2 100%);
     }
 
-    search-trigger {
+    search-trigger,
+    .search-trigger {
       width: 32px;
       height: 32px;
       min-width: 32px;
@@ -102,13 +105,15 @@ quick-search {
     }
   }
 
-  quick-search-results {
+  quick-search-results,
+  .quick-search-results {
     display: block;
     @include wrapper;
     margin-top: 18px;
   }
 
-  quick-search-result {
+  quick-search-result,
+  .quick-search-result {
     width: 100%;
     display: flex;
     align-items: center;
@@ -208,14 +213,16 @@ body.search-is-active {
   }
 
   @include stop-at($header-breakpoint) {
-    quick-search {
+    quick-search,
+    .quick-search {
       display: block;
       pointer-events: inherit;
       transform: translate3d(0, 0, 0);
     }
   }
   @include start-at($header-breakpoint) {
-    quick-search {
+    quick-search,
+    .quick-search {
       display: block;
       pointer-events: inherit;
       transform: translate3d(0, 0, 0);
