show search page

--- a/src/common/scss/components/_businessPreview.scss
+++ b/src/common/scss/components/_businessPreview.scss
@@ -114,9 +114,11 @@ business-preview {
   }
 }
 
+.search-results,
 search-results {
   business-preview {
     display: flex;
+    flex-direction: row;
     width: 100%;
     height: auto;
     min-width: 100%;
