--- a/src/common/scss/components/_search.scss
+++ b/src/common/scss/components/_search.scss
@@ -110,6 +110,7 @@ quick-search,
     display: block;
     @include wrapper;
     margin-top: 18px;
+    padding-bottom: 72px;
   }
 
   quick-search-result,
